--- a/public/views/about.html
+++ b/public/views/about.html
@@ -1,5 +1,5 @@
-<div ng-controller="MainCtrl">
-  <div class="header">
+<!doctype html>
+<div class="header">
 
     <h1>WORKING ON APP HERE FOR INTEGRATION WITH HEROKU</h1>
   <ul class="nav nav-pills pull-right">
@@ -46,19 +46,10 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, eos, pariatur aliquid consectetur quae ad iure facere dolorum minus quis quasi non labore ullam ipsa omnis doloremque consequatur vel eaque.
   </p>
 
-  <h4>Sneak Preview @ THEKACKIEPROJECT</h4>
+  <h4>SHOW ME SOMETHING ABOUT!!</h4>
   <img src="images/aftershowernyc.jpg" alt="I'm The Grim Reaper"><br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, culpa quia qui repellat perspiciatis nihil quasi! Saepe, nostrum eveniet quo fugit aut voluptatibus nisi minima maiores. Quidem in deleniti qui.</p>
-</div><div class="header">
-  <ul class="nav nav-pills pull-right">
-    <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#/blog">Blog</a></li>
-   
-  </ul>
-  <h3 class="text-muted">baby-mean</h3>
 </div>
-  <p><a class="btn btn-lg btn-success" ng-href="#/blog">I WANT A PEEK!</a></p>
-</div>
+
 <div class="footer">
   <p><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</p>
 </div>
