--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
 		title= title
 		link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/style.css')
-	body(ng-app='ngDay2App')
+	body(ng-app='artNg')
 		block content
 		script(src='/components/jquery/dist/jquery.js')
 		script(src='/components/angular/angular.js')
@@ -12,7 +12,7 @@ html
 		script(src='/components/angular-cookies/angular-cookies.js')
 		script(src='/components/angular-sanitize/angular-sanitize.js')
 		script(src='/components/angular-route/angular-route.js')
-		script(src='/components/angular-bootstrap/ui-bootstrap-tpls.js')
+		//- script(src='/components/angular-bootstrap/ui-bootstrap-tpls.js')
 		script(src='/js/app.js')
 		script(src='/js/services/services.js')
 		script(src='/js/controllers/main.js')
